// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleFilesCache /> should render 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Cached Trims
    </h2>
    <p>
      Trimmed reads saved from analysis runs that can be reused in future analyses.
    </p>
  </Box__BoxGroupHeader>
  <Connect(SampleCacheItem)
    createdAt="2018-01-01T00:00:00.000000Z"
    files={
      Array [
        Object {
          "name": "reads_1.fastq.gz",
          "size": 136569053,
        },
      ]
    }
    hash="abc123"
    id="foo"
    key="foo"
    missing={false}
  />
  <Connect(SampleCacheItem)
    createdAt="2018-02-01T00:00:00.000000Z"
    files={
      Array [
        Object {
          "name": "reads_1.fastq.gz",
          "size": 290100291,
        },
      ]
    }
    hash="xyz789"
    id="baz"
    key="baz"
    missing={true}
  />
</Box__BoxGroup>
`;

exports[`<SampleFilesCache /> should render NoneFound when caches array empty 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Cached Trims
    </h2>
    <p>
      Trimmed reads saved from analysis runs that can be reused in future analyses.
    </p>
  </Box__BoxGroupHeader>
  <NoneFoundSection
    key="none"
    noun="cached trims"
  />
</Box__BoxGroup>
`;
